app/css/reporting.scss
reporting, reporting-devices {
  .box {
    margin: rem-calc(10px);
    padding: rem-calc(20px);
    min-height: rem-calc(150px);
    border-radius: rem-calc(10);
    &.box-left {
      margin-left: 0;
    }
    &.box-right {
      margin-right: 0;
    }
    &.box-single {
      margin-left: 0;
      margin-right: 0;
    }
    .row {
      padding-left: 0;
    }
    h3 {
      color: $jet;
    }
    h4.number {
      margin:0;
      font-size: $h2-font-size;
    }
    img.email-error {
      width: 75px;
      height: 65px;
    }
    img.email-success {
      width: 75px;
      height: 75px;
    }
  }
  .line {
    height: 100%;
    width: rem-calc(5);
    margin-right: rem-calc(10);
    position: absolute;
    &.registered {
      background: $yellow;
    }
    &.active {
      background: $red;
    }
    &.secondary {
      background: $grey_medium;
    }
    &.success {
      background: $green;
      padding: 0;
    }
    &.failure {
      background: $peach;
    }
  }
  .content {
    margin-left: rem-calc(16);
  }
  img.icon {
    float: left;
    width: 24px;
    height: 24px;
    margin-right: rem-calc(10);
  }
  .reporting-template {
    padding-bottom: rem-calc(10);
  }
  /* Club overview */
  .gym-name {
    font-size: $h4-font-size;
    font-weight: bold;
    color: $jet;
  }
  .ride-count {
    color: $grey;
    font-weight: normal;
    &.right {
      position: relative;
      left: 0;
      top: rem-calc(-26);
    }
  }
  .progress {
    height: rem-calc(12);
    .meter {
      background: $blue;
    }
  }

  /* Circle graphics */
  svg.circle {
    transform: rotate(270deg);
    display: inline-block;
    width: rem-calc(90);
    height: rem-calc(90);
    stroke: $grey_medium;
  }

  circle-progress {
    &.p100:before {
      left: rem-calc(17);
    }
    &.p0:before {
      left: rem-calc(33);
    }
    &:before {
      content: attr(data-percent)"%";
      position: absolute;
      top: rem-calc(30);
      left: rem-calc(25);
      font-weight: bold;
      font-size: $h2-font-size;
    }
    &.registered .percent {
      stroke: $yellow;
    }
    &.active .percent {
      stroke: $red;
    }
  }
}

